syntax = "proto3";
package base;

import "schema/ids/base/identityID.proto";
import "schema/ids/base/ownableID.proto";

message SplitID {
  IdentityID owner_id = 1;
  OwnableID ownable_id = 2;
}